# llvm-passes

./: .gitignore  CMakeLists.txt  README.md  create-cmake.sh  create-pass.sh  rename-pass.sh  run-pass.sh  run_pass.sh
examples/print-all-func/: README.md  test.c  test.ll
misc/: Tutorial1.md
passes/: CMakeLists.txt  create_intrinsic_call.cpp  create_printf_call.cpp  create_void_call.cpp  multiplication_shifts_pass.cpp  print_all_func_pass.cpp  print_frequency.cpp  print_frequency_dense_map.cpp  print_frequency_string_map.cpp
